Fix recenter crossline when zooming. Fix image position when resizing the canvas.